Added table 4 with number of tasks for exp. 1.

--- a/answers.tex
+++ b/answers.tex
@@ -61,7 +61,7 @@ While Pegasus represents one good use case for this work, there are other system
 Regarding the analysis, the paper uses mostly the makespan (a definition would be also good) for drawing the conclusions. I consider there are other important metrics to analyze for such strategies, especially from a scheduling point of view, otherwise the analysis seems geared towards achieving users' objectives without taking in consideration resource utilization or other objectives.
 \end{review}
 
-\answer{We added a definition of makespan to the introduction section of the paper. We do not aim at measuring resource utilization since high resource utilization may imply in poor clustering (task re-computation). However, we define a \emph{waste} metric to measure the amount of tasks re-computed for each strategy. The metric measurements are presented in \todo{}.}
+\answer{We added a definition of makespan to the introduction section of the paper. We do not aim at measuring resource utilization since high resource utilization may imply in poor clustering (task re-computation). However, we measure the amount of tasks re-computed for each strategy. The measurements are presented in Table 4.}
 
 
 
