--- a/biblio.bib
+++ b/biblio.bib
@@ -37,10 +37,9 @@
 }
 
 @inproceedings{da2013toward,
-	author = {Ferreira da Silva, Rafael and Juve, Gideon and Deelman, Ewa and Glatard, Tristan and Desprez, Fr{\'e}d{\'e}ric and Thain, Douglas and Tovar, Benjamin and Livny, Miron},
+	author = {Ferreira da Silva, Rafael and Juve, Gideon and Deelman, Ewa and others},
 	title = {Toward fine-grained online task characteristics estimation in scientific workflows},
-	booktitle = {Proceedings of the 8th Workshop on Workflows in Support of Large-Scale Science},
-	series = {WORKS '13},
+	booktitle = {8th Workshop on Workflows in Support of Large-Scale Science},
 	year = {2013},
 	pages = {58--67},
 	doi = {10.1145/2534248.2534254},
@@ -48,7 +47,7 @@
 
 @incollection{fahringer2007askalon,
   title={Askalon: A development and grid computing environment for scientific workflows},
-  author={Fahringer, Thomas and Prodan, Radu and Duan, Rubing and Hofer, J{\"u}urgen and Nadeem, Farrukh and Nerieri, Francesco and Podlipnig, Stefan and Qin, Jun and Siddiqui, Mumtaz and Truong, Hong-Linh and others},
+  author={Fahringer, Thomas and others},
   booktitle={Workflows for e-Science},
   pages={450--471},
   year={2007},
@@ -807,7 +806,7 @@ pages={86-93},
  title = {Job and data clustering for aggregate use of multiple production cyberinfrastructures},
  booktitle = {5th Inter. workshop on Data-Intensive Distributed Computing},
  year = {2012},
- author = {Maheshwari, Ketan and Espinosa, Allan and Katz, Daniel S. and Wilde, Michael and Zhang, Zhao and Foster, Ian and Callaghan, Scott and Maechling, Phillip},
+ author = {Maheshwari, Ketan and others},
 
 },
 
@@ -1021,19 +1020,18 @@ pages={167-},
 
 
 @INPROCEEDINGS{Rubing2009, 
-	author={Rubing Duan and Nadeem, F. and Jie Wang and Yun Zhang and Prodan, R. and Fahringer, T.}, 
-	booktitle={9th IEEE/ACM International Symposium on Cluster Computing and the Grid}, 
+	author={Rubing Duan and others}, 
+	booktitle={9th IEEE/ACM Inter. Symp. on Cluster Computing and the Grid}, 
 	title={A Hybrid Intelligent Method for Performance Modeling and Prediction of Workflow Activities in Grids}, 
 	year={2009}, 
 	pages={339-347}, 
 },
 
 @inproceedings{Rubing2005,
-   	author={Rubing Duan and Radu Prodan and Thomas Fahringer},
+   	author={Rubing Duan and others},
 	title={Run-time Optimisation of Grid Workflow Applications},
-	booktitle={7th IEEE/ACM International Conference on Grid Computing},
+	booktitle={7th IEEE/ACM Inter. Conf. on Grid Computing},
 	pages={33-40},
- 	month=sep,
     	year={2006},
 },
 
@@ -1161,7 +1159,7 @@ pages={389 -400},
     author={Tracy D. Braun and
                others},
     title={A Comparison of Eleven Static Heuristic for Mapping a Class of Independent Tasks onto Heterogeneous Distributed Computing Systems},
-    journal={Journal of Parallel and Distributed Computing},
+    journal={Parallel and Distributed Computing},
     volume={61},
     number={6},
     year={2001},
@@ -1305,7 +1303,7 @@ pages={389 -400},
 },
 
 @inproceedings{Berriman2004,
-    author = {Berriman, G. B. and Deelman, Ewa and Good, John C. and Jacob, Joseph C. and Katz, Daniel S. and Kesselman, Carl and others},
+    author = {Berriman, G. B. and Deelman, Ewa and others},
     title = {Montage: a grid-enabled engine for delivering custom science-grade mosaics on demand},
     booktitle = {{SPIE Conference on Astronomical Telescopes and Instrumentation}},
     month = jun,
@@ -1313,7 +1311,7 @@ pages={389 -400},
 },
 
 @inproceedings{Berriman2010,
-    author = {G. Bruce Berriman and Gideon Juve and Ewa Deelman and Moira Regelson and Peter Plavchan},
+    author = {G. Bruce Berriman and Gideon Juve and Ewa Deelman and others},
     title = {The Application of Cloud Computing to Astronomy: A Study of Cost and Performance}, 
     booktitle = {Workshop on e-Science challenges in Astronomy and Astrophysics},
     year = {2010}
@@ -1423,7 +1421,7 @@ pages={389 -400},
     month = jan,
     year = {2011},
     pages = {23--50},
-    author = {Calheiros, Rodrigo N. and Ranjan, Rajiv and Beloglazov, Anton and De Rose, César A. F. and Buyya, Rajkumar},
+    author = {Calheiros, Rodrigo N. and others},
 },
 
 @inproceedings{Callaghan2008,
@@ -2950,8 +2948,7 @@ pages={23-30},
 
 @inproceedings{Chen2013b,
 	author = {Chen, Weiwei and Ferreira da Silva, Rafael and Deelman, Ewa and Sakellariou, Rizos},
-	booktitle = {2013 IEEE 9th International Conference on eScience},
-	series = {eScience'13},
+	booktitle = {IEEE 9th Inter. Conf. on eScience},
 	title = {Balanced Task Clustering in Scientific Workflows},
 	year = {2013},
 	pages = {188--195},
@@ -3000,7 +2997,6 @@ pages={23-30},
 	doi = {10.1007/978-3-642-36949-0\_10},
 	title = {A Science-Gateway Workload Archive to Study Pilot Jobs, User Activity, Bag of Tasks, Task Sub-steps, and Workflow Executions},
 	author = {Ferreira da Silva, Rafael and Glatard, Tristan},
-	pages = {79--88}
 }
 
 @INPROCEEDINGS{5071878,
@@ -3012,8 +3008,8 @@ pages={23-30},
 }
 
 @INPROCEEDINGS{5671856,
-	author={Montagnat, J. and Glatard, T. and Reimert, D. and Maheshwari, K. and Caron, E. and Desprez, F.},
-	booktitle={Workflows in Support of Large-Scale Science (WORKS), 2010 5th Workshop on},
+	author={Montagnat, J. and others},
+	booktitle={5th Workshop on Workflows in Support of Large-Scale Science},
 	title={Workflow-based comparison of two Distributed Computing Infrastructures},
 	year={2010},
 	pages={1-10},
@@ -3043,7 +3039,6 @@ pages={23-30},
         journal = {Future Generation Computer Systems},
         volume = {},
         number = {},
-        pages = {in press},
         year = {2014},
         doi = {10.1016/j.future.2014.10.008},
         author = {Deelman, Ewa and Vahi, Karan and Juve, Gideon and Rynge, Mats and Callaghan, Scott and Maechling, Phil J. and Mayani, Rajiv and Chen, Weiwei and Ferreira da Silva, Rafael and Livny, Miron and Wenger, Kent}
