--- a/ftc.tex
+++ b/ftc.tex
@@ -1357,9 +1357,7 @@ better performance than simple static methods that retry failed clustered jobs. 
 the performance gain may be significantly impacted if the job clustering size is not 
 adjusted to the nearly optimal size. The Dynamic Reclustering algorithm outperforms
 most of the methods for the 5 workflow applications, however, it yields poorer 
-performance when the workflow structure is mostly composed of pipelines and very
-short runtime tasks (e.g., Epigenomics workflow). In this case, Vertical Reclustering 
-would be more suitable.}
+performance when the workflow structure is irregular (e.g., SIPHT workflow). In this case, Vertical Reclustering would be more suitable.}
 
 
 
