--- a/ftc.tex
+++ b/ftc.tex
@@ -264,7 +264,7 @@ group fine-grained tasks according to the processing capacity and the network ba
 current available resources.
 
 \rev{Several works have addressed the workflow-mapping problem by
-using DAG scheduling heuristics~\cite{Topcuoglu2002, Blythe2005, Rubing2005, 
+using DAG scheduling heuristics~\cite{Topcuoglu2002, Blythe2005, Braun2001, Rubing2005, 
 Wieczorek2005, Kalayci2010}.
 In particular, HTCondor~\cite{Kalayci2010} uses matchmaking to avoid scheduling tasks to 
 compute nodes without sufficient resources (CPU power, etc.). In a previous work~\cite{Chen2012}, 
