Incorporated Thomas comments.

--- a/answers.tex
+++ b/answers.tex
@@ -196,7 +196,7 @@ performance when the workflow structure is irregular (e.g., SIPHT workflow). In 
 In this sense, I have doubts that the five workflows cover all patterns encountered today in scientific workflows. Adding some synthetic workflows to the simulation could strengthen the completeness of the evaluation.
 \end{review}
 
-\answer{We believe the simulated workflow applications used in this work represent most of the workflow patterns found in the literature and real workflows:}
+\answer{We believe the simulated workflow applications used in this work represent a reasonable large set of workflow patterns found in literature:}
 
 \revised{Cerezo, Nadia. Workflows conceptuels. Diss. Université Nice Sophia Antipolis, 2013.}
 
@@ -212,7 +212,7 @@ In this sense, I have doubts that the five workflows cover all patterns encounte
 With respect to style, the paper contains too many self-references and some captions in figures are too small.
 \end{review}
 
-\answer{We increased the caption of several figures, and revised the self-references on the text.}
+\answer{We increased the caption of several figures, and reduced the self-references on the text.}
 
 
 
