Incorporated Thomas comments.

--- a/answers.tex
+++ b/answers.tex
@@ -175,9 +175,9 @@ The paper is written in easy to understand practical terms, except Section 2 whi
 The drawback with this paper in my opinion is the evaluation done using some mixture of ``simulated real-world workflows''. While I acknowledge the importance of simulation in validating such heuristics, I am not convinced that one of its main characteristics, the reproducibility, is guaranteed in this paper. The workflow traces injected in the workflow simulator do not seem to be open data. In general, I favour a complete separation between complete synthetic simulation, and its validation in isolated real-world scenarios, but through real execution. 
 \end{review}
 
-\answer{Synthetic workflows are computer-generated workflows that have characteristics derived from real workflow applications. They are similar to real workflows, but instead of specifying real computations, they specify artificial resource requirements, including the runtime and memory usage of tasks, and the sizes of input and output files. Synthetic workflows are generated from synthetic workflow generators, which use randomization and parameter sweeps to create many different synthetic workflows using the same set of input parameters. We added a reference to the generator as well as the traces, profile data, and characterizations:}
+\answer{The main reason why we left out real world scenarios is the lack of accurate measurement techniques (all the overhead parameters are highly likely to be influenced by the system environment, such as unpredicted system load, network congestion, and periodic fluctuation), and the lack of reproducibility which is vital to evaluate our model. Synthetic workflows are computer-generated workflows that have characteristics derived from real workflow applications. They are similar to real workflows, but instead of specifying real computations, they specify artificial resource requirements, including the runtime and memory usage of tasks, and the sizes of input and output files. Synthetic workflows are generated from synthetic workflow generators, which use randomization and parameter sweeps to create many different synthetic workflows using the same set of input parameters. We added a reference to the generator as well as the traces, profile data, and characterizations:}
 
-\revised{Traces, profile data, and characterizations are freely available online for the community [65]. }
+\revised{Traces, profile data, and characterizations are freely available online for the community [65].}
 
 
 
